<resources>
    <string name="app_name">AppPassword</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Tất cả tài khoản web</string>
    <string name="menu_gallery">Tất cả ghi chú</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="t_i_kho_n_web">Tài khoản web</string>
    <string name="ghi_ch">Ghi chú</string>
    <string name="h_nh_nh">Hình ảnh</string>
    <string name="avatar">Avatar</string>
    <string name="username">Username</string>
    <string name="username_s_email">Username\'s email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_app">Logo app</string>
    <string name="nh_p_m_t_kh_u">Nhập mật khẩu</string>
    <string name="nh_p_l_i_m_t_kh_u">Nhập lại mật khẩu</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <string name="hi_n_th_m_t_kh_u">Hiển thị mật khẩu</string>
    <string name="password_management_app_created_by_vtvlive">Password Management App created by VTVLive</string>
    <string name="password_manager">Password Manager</string>
    <string name="password_manager_app_created_by">Password Manager App created by</string>
    <string name="logo_vtvlive">Logo VTVLive</string>
    <string name="thi_t_l_p_c_s_d_li_u">Thiết lập cơ sở dữ liệu</string>
    <string name="t_o_m_t_c_s_d_li_u_m_i_v_t_m_t_kh_u">Tạo một cơ sở dữ liệu mới và đặt mật khẩu</string>
    <string name="kh_i_ph_c_c_d_li_u_t_m_m_y">Khôi phục cơ dữ liệu từ đám mây</string>
    <string name="tao_csdl_moi_va_dat_mat_khau">Tạo một cơ sở dữ liệu mới và đặt mật khẩu</string>
    <string name="kh_i_ph_c_c_s_d_li_u_t_m_m_y">Khôi phục cơ sở dữ liệu từ đám mây</string>
    <string name="t_o_m_t_c_s_d_li_u_m_i">Tạo một cơ sở dữ liệu mới</string>
    <string name="t_o_m_t_kh_u_web_m_i">Tạo mật khẩu web mới</string>
    <string name="h_y">Hủy</string>
    <string name="xong">Xong</string>
    <string name="n_i_dung_ti_u">Nội dung tiêu đề</string>
    <string name="t_n_ng_nh_p">Tên đăng nhập</string>
    <string name="link_website">Link website</string>
    <string name="m_t_kh_u">Mật khẩu</string>
    <string name="logoresetpassword">LogoResetPassword</string>
    <string name="th_m_ghi_ch">Thêm ghi chú</string>
    <string name="n_i_dung_ghi_ch">Nội dung ghi chú</string>
    <string name="ti_u">Tiêu đề</string>
    <string name="th_m_t_y_ch_n">Thêm tùy chọn</string>
</resources>