<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="duy.anh.apppassword.ui.tai_khoan_web.tai_khoan_web_fragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_taikhoanweb" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="duy.anh.apppassword.ui.ghi_chu.GhiChuFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_ghichu" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="duy.anh.apppassword.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>