<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="FirstScreenCSDL">

    <ImageView
        android:id="@+id/LogoApp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo_app"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_app" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/thi_t_l_p_c_s_d_li_u"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/t_o_m_t_c_s_d_li_u_m_i"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="italic" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/kh_i_ph_c_c_s_d_li_u_t_m_m_y"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="italic" />

</LinearLayout>