<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="Splash1Second">

    <ImageView
        android:id="@+id/LogoApp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo_app"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_app" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="23dp"
        android:text="@string/password_manager_app_created_by"
        android:textColor="#008aff"
        android:textSize="22sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/LogoVTVLive"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:contentDescription="@string/logo_vtvlive"
        android:src="@drawable/logo_vtvlive" />

</LinearLayout>