<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".taotaikhoanwebmoi">

    <RelativeLayout

        android:id="@+id/ThanhCongCu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Huy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/h_y"
            android:textColor="#008aff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TaoMatKhauWebMoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@id/Xong"
            android:layout_toEndOf="@id/Huy"
            android:paddingStart="42dp"
            android:paddingEnd="42dp"
            android:text="@string/t_o_m_t_kh_u_web_m_i"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Xong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/xong"
            android:textColor="#008aff"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ThanhCongCu">

        <EditText
            android:id="@+id/NoiDungTieuDe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="15dp"
            android:autofillHints="Nhập nội dung tiêu đề"
            android:background="@drawable/rounded_corner"
            android:hint="@string/n_i_dung_ti_u"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="18dp"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/TenDangNhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="15dp"
            android:autofillHints="Nhập tên đăng nhập"
            android:background="@drawable/rounded_corner"
            android:hint="@string/t_n_ng_nh_p"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="18dp"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/MatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="15dp"
            android:autofillHints="Nhập mật khẩu"
            android:background="@drawable/rounded_corner"
            android:hint="@string/m_t_kh_u"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="18dp"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/LinkWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="15dp"
            android:autofillHints="Nhập Link Website"
            android:background="@drawable/rounded_corner"
            android:hint="@string/link_website"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="18dp"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="italic" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
